Switched to Java8.